# claude-code-cost-explorer

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  app.py  check_turn.py  cost.py  pyproject.toml  reader.py
.github/: dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  pricing_update.md
.github/workflows/: ci.yml  codeql.yml  publish.yml  release-drafter.yml
claude_code_cost_explorer/: app.py  cost.py  reader.py
claude_code_cost_explorer/templates/: base.html  days.html  session.html  sessions.html  turn.html
templates/: days.html  session.html  turn.html
tests/: test_app.py  test_cost.py  test_reader.py
tests/fixtures/: session_empty.jsonl  session_simple.jsonl  session_with_compaction.jsonl  session_with_title.jsonl
