[project]
name = "claude-code-cost-explorer"
version = "0.1.0"
description = "Local web app to explore Claude Code API cost and token usage by day, session, and turn"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
dependencies = [
    "flask>=3.1.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.0",
    "ruff>=0.15.10",
]

[project.urls]
Homepage = "https://github.com/ranajoy-dutta/claude-code-cost-explorer"
Issues = "https://github.com/ranajoy-dutta/claude-code-cost-explorer/issues"

[project.scripts]
ccx = "claude_code_cost_explorer.app:main"
claude-code-cost-explorer = "claude_code_cost_explorer.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.package-data]
"claude_code_cost_explorer" = ["templates/*"]
